# email-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Taskfile.yml  sqlx-data.json
.github/workflows/: general.yaml
config/: base.yaml  local.yaml  production.yaml
migrations/: 20230112164414_create_subscriptions.up.sql  20230119173950_add_status_to_subscriptions.down.sql  20230119173950_add_status_to_subscriptions.up.sql  20230119174720_make_status_not_null_in_subscriptions.down.sql  20230119174720_make_status_not_null_in_subscriptions.up.sql  20230119182519_create_subscription_tokens.down.sql  20230119182519_create_subscription_tokens.up.sql  20230127102620_rename_password_column.down.sql  20230202152947_seed_user.down.sql  20230202152947_seed_user.up.sql  20230205132121_create_idempotency_table.down.sql  20230205132121_create_idempotency_table.up.sql  20230207104825_remove_null_checks_on_idempotency.down.sql  20230207144128_create_newsletter_issues_table.down.sql  20230207144128_create_newsletter_issues_table.up.sql  20230207151117_create_issue_delivery_queue_table.down.sql  20230207151117_create_issue_delivery_queue_table.up.sql
scripts/: init_db.sh
src/: auth.rs  email_client.rs  issue_delivery.rs  lib.rs  main.rs  server.rs  session.rs  startup.rs  telemetry.rs
src/auth/: middleware.rs  password.rs
src/configuration/: application.rs  database.rs  email_client.rs  environment.rs  mod.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: index.html  mod.rs
src/routes/login/: get.rs  mod.rs  post.rs
src/routes/subscriptions/: confirm.rs  mod.rs
taskfiles/: Database.yml  Run.yml  Test.yml
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  server.rs  subscriptions.rs
tests/api/admin/: dashboard.rs  mod.rs  password.rs
tests/api/health_check/: get.rs  mod.rs
tests/api/proc/: .gitignore  Cargo.toml
tests/api/proc/src/: test.rs
tests/api/subscriptions/: confirm.rs  mod.rs  post.rs
tests/health_check/: get.rs  main.rs
tests/helpers/macros/: Cargo.toml
tests/helpers/macros/src/: lib.rs  test.rs
tests/helpers/test_server/: Cargo.toml
tests/helpers/test_server/src/: lib.rs
tests/subscriptions/: main.rs  post.rs
