[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
dotenvy = "0.15.6"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
chrono = {version = "0.4.23", default-features = false, features = ["clock"]}
regex = "1.7.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "registry"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.2"
serde-aux = "4.1.2"
unicode-segmentation = "1.10.0"
validator = "0.16.0"
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]}

[dev-dependencies]
once_cell = "1.17.0"
reqwest = "0.11.13"
fake = "~2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
