[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
dotenvy = { version = "0.15.6", default-features = false }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
chrono = { version = "0.4.23", default-features = false, features = ["clock"]}
regex = { version = "1.7.1", default-features = false }
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls"] }
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "registry"] }
tracing-bunyan-formatter = { version = "0.3.6", default-features = false }
tracing-log = { version = "0.1.3", default-features = false }
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = { version = "0.7.2", default-features = false }
serde-aux = { version = "4.1.2", default-features = false }
unicode-segmentation = { version = "1.10.0", default-features = false }
validator = { version = "0.16.0", default-features = false }
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]}
serde_with = { version = "2.2.0", default-features = false, features = ["macros"] }
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
anyhow = { version = "1.0.68", default-features = false }
thiserror = { version = "1.0.38", default-features = false }

[dev-dependencies]
test_server = { path = "tests/helpers/test_server" }
macros = { path = "tests/helpers/macros" }
async-trait = { version = "0.1.62", default-features = false }
fake = { version = "~2.3.0", default-features = false }
quickcheck = { version = "0.9.2", default-features = false }
quickcheck_macros = { version = "0.9.1", default-features = false }
wiremock = { version = "0.5.17", default-features = false }
serde_json = { version = "1.0.91", default-features = false }
linkify = { version = "0.9.0", default-features = false }
