[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
test_server = { path = "../test_server" }
proc-macro2 = { version = "1.0.36", default-features = false }
quote = { version = "1.0.14", default-features = false }
syn = { version = "1.0.84", default-features = false, features = ["full"] }
