[package]
name = "test_server"
version = "0.1.0"
edition = "2021"

[dependencies]
zero2prod = { path = "../../.." }
once_cell = { version = "1.17.0", default-features = false }
tokio = { version = "1.24.1", default-features = false, features = ["rt-multi-thread"] }
wiremock = { version = "0.5.17", default-features = false }
dotenvy = { version = "0.15.6", default-features = false }
reqwest = { version = "0.11.13", default-features = false }
